# baredSC

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  baredSC_dev_env.yml  baredSC_env.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml  (+2 more)
baredSC/: __init__.py  _version.py  baredSC_1d.py  baredSC_2d.py  combineMultipleModels_1d.py  combineMultipleModels_2d.py  common.py  oned.py  twod.py
docs/: conf.py  index.rst  requirements.txt
example/: annData_1d_1gauss_logevid.txt  annData_1d_1gauss_neff.txt  annData_1d_1gauss_p.txt  annData_1d_1gauss_pdf.txt  annData_1d_1gauss_posterior_per_cell.txt  annData_1d_2gauss_logevid.txt  annData_1d_2gauss_neff.txt  annData_1d_2gauss_p.txt  annData_1d_2gauss_pdf.txt  annData_1d_2gauss_posterior_per_cell.txt  annData_2d_1gauss_corr.txt  annData_2d_1gauss_logevid.txt  annData_2d_1gauss_neff.txt  annData_2d_1gauss_p.txt  annData_2d_1gauss_pdf2d.txt  annData_2d_1gauss_pdf2d_flat.txt  first_example_1d_1-3gauss_pdf.txt  first_example_1d_1-3gauss_posterior_per_cell.txt  first_example_1d_1gauss_logevid.txt  first_example_1d_1gauss_neff.txt  first_example_1d_1gauss_p.txt  first_example_1d_1gauss_pdf.txt  first_example_1d_1gauss_posterior_per_cell.txt  first_example_1d_2gauss.npz  first_example_1d_2gauss_log_logevid.txt  first_example_1d_2gauss_log_neff.txt  first_example_1d_2gauss_log_p.txt  first_example_1d_2gauss_log_pdf.txt  first_example_1d_2gauss_log_posterior_per_cell.txt  first_example_1d_2gauss_logevid.txt  first_example_1d_2gauss_neff.txt  first_example_1d_2gauss_p.txt  first_example_1d_2gauss_pdf.txt  (+139 more)
(+31 files in other folders)
